<resources>
    <string name="app_name">Inventory App</string>
    <string name="product_name">Product Name:</string>
    <string name="product_quantity">Product Quantity:</string>
    <string name="product_price">Product Price ($):</string>
    <string name="add_new_product">ADD NEW PRODUCT</string>
    <string name="view_product_list">VIEW PRODUCT LIST</string>
    <string name="sale">SALE</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="title_activity_product_inventory">Product Inventory</string>
    <string name="id">ID</string>
    <string name="product_id">Product ID:</string>
    <string name="no_products_found_textview">No products found in the database.\nPlease add an item in the previous window.</string>
    <string name="error_insert_product">ERROR: Could not add product to database.</string>
    <string name="success_insert_product">Successfully added product to database!</string>
    <string name="missing_fields">Please fill in all of the fields!</string>
    <string name="quantity_sold">Quantity Sold:</string>
    <string name="product_details">Product Details</string>
    <string name="static_id_number">ID#:</string>
    <string name="select_image">Select Image</string>
    <string name="plus_1_quantity">+1 QUANTITY (RECEIVE SHIPMENT)</string>
    <string name="minus_1_quantity">-1 QUANTITY (PRODUCT SOLD)</string>
    <string name="order_from_supplier">ORDER FROM SUPPLIER</string>
    <string name="delete_from_database">DELETE FROM DATABASE</string>
    <string name="confirm_deletion">Are you sure you want to delete this product from the database?</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="supplier_email">supplier@suppliercompany.com</string>
    <string name="supplier_email_body">Please send us the following item. Thank you.</string>
</resources>
