<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="65dp"
    android:weightSum="3"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/product_name"
            android:id="@+id/product_name_textView"
            android:layout_gravity="center_vertical" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/id"
                android:id="@+id/id_textView"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView5"
                android:layout_toEndOf="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/static_id_number"
                android:id="@+id/textView5"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/price"
            android:id="@+id/price_textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/quantity_textView"
            android:layout_toStartOf="@+id/quantity_textView"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/price_amount_textView"
            android:layout_below="@+id/price_textView"
            android:layout_alignLeft="@+id/price_textView"
            android:layout_alignStart="@+id/price_textView"
            android:layout_toLeftOf="@+id/quantity_textView"
            android:layout_toStartOf="@+id/quantity_textView"
            android:layout_weight="2"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/quantity"
            android:id="@+id/quantity_textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/quantity_amount_textView"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/quantity_textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/quantity_textView"
            android:layout_alignStart="@+id/quantity_textView"
            android:layout_weight="2"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/sale"
        android:id="@+id/list_sale_button"
        android:layout_gravity="center_vertical" />

</LinearLayout>